--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
   <header id="site-header" class="fixed-top">
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light">
+        <a href="index.html" class="navbar-brand">
+          <img src="assets/images/Lucid-logo.png" class="img-fluid rounded" alt="client image">
+        </a>
+        
         <h1><a class="navbar-brand" href="index.html">
-            <span>L</span>ucid Telcom Networks
+            <!-- <span>T</span>elcom Networks -->
           </a></h1>
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -251,6 +255,7 @@
               </div>
             </div>
           </div>
+          
         </div>
       </div>
     </div>
@@ -259,7 +264,7 @@
   <!--//features-4 -->
 
   <!-- /specification-6-->
-  <section class="w3l-specification-6">
+  <!-- <section class="w3l-specification-6">
     <div class="specification-6-mian py-5">
       <div class="container py-lg-5">
         <div class="row story-6-grids">
@@ -296,15 +301,6 @@
                   </div>
                 </div>
               </div>
-              <!-- <div class="stats_left">
-                <div class="counter_grid">
-                  <div class="icon_info">
-                    <p class="counter">5063</p>
-                    <h4>Get awards</h4>
-
-                  </div>
-                </div>
-              </div> -->
             </div>
 
           </div>
@@ -312,7 +308,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- //specification-6-->
   <section class="w3l-pricing">
     <div class="py-5" id="pricing">
@@ -454,6 +450,7 @@
       </div>
     </div>
   </section>
+
   <!--//testimonials-->
 
   <!-- footer-66 -->
@@ -514,6 +511,8 @@
           </div>
         </div>
       </div>
+      <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+      <div class="elfsight-app-e9313621-9871-4c7e-aadb-5fb81847e6ab"></div>
       <div class="below-section">
         <div class="container">
           <div class="copyright-footer">
@@ -525,7 +524,7 @@
       </div>
       <!-- copyright -->
       <!-- move top -->
-      <button onclick="topFunction()" id="movetop" title="Go to top">
+      <!-- <button onclick="topFunction()" id="movetop" title="Go to top">
         <span class="fa fa-long-arrow-up" aria-hidden="true"></span>
       </button>
       <script>
@@ -547,7 +546,7 @@
           document.body.scrollTop = 0;
           document.documentElement.scrollTop = 0;
         }
-      </script>
+      </script> -->
       <!-- /move top -->
 
     </section>
@@ -709,7 +708,6 @@
   <!--//MENU-JS-->
 
   <script src="assets/js/bootstrap.min.js"></script>
-
 </body>
 
 </html>
