--- a/about.html
+++ b/about.html
@@ -19,8 +19,12 @@
   <header id="site-header" class="fixed-top">
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light">
+        <a href="index.html">
+          <img src="assets/images/Lucid-logo.png" class="img-fluid rounded" alt="client image">
+        </a>
+        
         <h1><a class="navbar-brand" href="index.html">
-            <span>L</span>ucid Telcom Networks
+            <!-- <span>L</span>ucid Telcom Networks -->
           </a></h1>
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
