--- a/contact.html
+++ b/contact.html
@@ -27,9 +27,13 @@
     <header id="site-header" class="fixed-top">
       <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light">
+          <a href="index.html" class="navbar-brand">
+            <img src="assets/images/Lucid-logo.png" class="img-fluid rounded" alt="client image">
+          </a>
+          
           <h1>
             <a class="navbar-brand" href="index.html">
-              <span>L</span>ucid Telcom Networks
+              <!-- <span>L</span>ucid Telcom Networks -->
             </a>
           </h1>
           <button
