--- a/services.html
+++ b/services.html
@@ -27,9 +27,13 @@
     <header id="site-header" class="fixed-top">
       <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light">
+          <a href="index.html">
+            <img src="assets/images/Lucid-logo.png" class="img-fluid rounded" alt="client image">
+          </a>
+          
           <h1>
             <a class="navbar-brand" href="index.html">
-              <span>L</span>ucid Telcom Networks
+              <!-- <span>L</span>ucid Telcom Networks -->
             </a>
           </h1>
           <button
@@ -137,6 +141,26 @@
               /></a>
               <a href="#" class="cause-title-wrap">
                 <h4 class="cause-title">CCTV Installation</h4>
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 causes-grid">
+            <div class="causes-grid-info">
+              <a href=""
+                ><img src="assets/images/installation.jpg" class="img-fuild" alt=""
+              /></a>
+              <a href="#" class="cause-title-wrap">
+                <h4 class="cause-title">WiFi Installation</h4>
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 causes-grid">
+            <div class="causes-grid-info">
+              <a href=""
+                ><img src="assets/images/installation1.jpg" class="img-fuild" alt=""
+              /></a>
+              <a href="#" class="cause-title-wrap">
+                <h4 class="cause-title">Fiber Installation</h4>
               </a>
             </div>
           </div>
