--- a/about.html
+++ b/about.html
@@ -19,11 +19,11 @@
   <header id="site-header" class="fixed-top">
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light">
-        <a href="index.html">
+        <a href="index.html" class="navbar-brand">
           <img src="assets/images/Lucid-logo.png" class="img-fluid rounded" alt="client image">
         </a>
         
-        <h1><a class="navbar-brand" href="index.html">
+        <h1><a class="navbar-brand" href="index.html" >
             <!-- <span>L</span>ucid Telcom Networks -->
           </a></h1>
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav"
