--- a/services.html
+++ b/services.html
@@ -27,7 +27,7 @@
     <header id="site-header" class="fixed-top">
       <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light">
-          <a href="index.html">
+          <a href="index.html" class="navbar-brand">
             <img src="assets/images/Lucid-logo.png" class="img-fluid rounded" alt="client image">
           </a>
           
