--- a/services.html
+++ b/services.html
@@ -267,6 +267,8 @@
             </div>
           </div>
         </div>
+        <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+        <div class="elfsight-app-e9313621-9871-4c7e-aadb-5fb81847e6ab"></div>
         <div class="below-section">
           <div class="container">
             <div class="copyright-footer">
