--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
             <li class="nav-item">
               <a class="nav-link" href="services.html">Services</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact Us</a>
+            </li>
           </ul>
           <ul class="navbar-nav search-right mt-lg-0 mt-2">
 
@@ -156,7 +159,7 @@
             <div class="title-content text-left mb-2">
               <h6 class="sub-title">Who We Are</h6>
               <h3 class="hny-title"> We have 10 years
-                of experience in this offering internet service.</h3>
+                of experience in offering internet service.</h3>
             </div>
             <p class="mt-3">We connect businesses and houses with internet and CCTV installation.</p>
             <a href="about.html" class="btn btn-style btn-primary mt-md-5 mt-4">Read More</a>
