--- a/about.html
+++ b/about.html
@@ -43,6 +43,9 @@
             <li class="nav-item">
               <a class="nav-link" href="services.html">Services</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact us</a>
+            </li>
           </ul>
 
           <!-- //toggle switch for light and dark theme -->
